--- a/frontend/pantry-pal-frontend-app/src/app/pages/sale/sale.component.html
+++ b/frontend/pantry-pal-frontend-app/src/app/pages/sale/sale.component.html
@@ -1,61 +1,57 @@
 <app-menu></app-menu>
 <div class="row">
-    <div class="col-8">
-        <div class="CartContainer">
-            <div class="row">
-              <div class="col-12">
-                <h3>Cart Items</h3>
-              </div> 
-            </div>
-            <div class="row pt-1" *ngFor="let cart of cartProducts"> 
-              <div class="col-3">
-                <img class="img-fluid" style="height: 200px;" [src]=cart.productImageURL class="card-img-top">
-              </div>
-              <div class="col-3">
-                Name: 
-                {{cart.productName}}
-              </div>
-              <div class="col-2 text-end">
-                Quantity: 
-                {{ cart.productQuantity}}
-              </div>
-             
-              <div class="col-2 text-end">
-                <button class="btn btn-sm btn-danger" (click)="RemoveItem(cart.productID)">Remove</button>
-               </div>
-            </div>
-           
-            <div class="row">
-              <div class="col-3">
+  <div class="col-8">
+    <div class="CartContainer" id="cart-container">
+      <div class="row">
+        <div class="col-12">
+          <h3 data-testid="cart-heading">Cart Items</h3>
+        </div> 
+      </div>
 
-              </div>
-              <div class="col-9">
-                <hr>
-              </div>
-            </div>
-           
-            <div class="row">
-              <div class="col-2">
-                 
-              </div>
-              <div class="col-2">
-                 
-              </div>
-              <div class="col-4">
-                <div class="Subtotal">Total Items: </div>
-                <div> <small> {{totalitems}} items</small></div>
-              </div>
-              <div class="col-4 text-end">
-                <div> Total Quantity: </div>
-                <strong> {{subTotal}}</strong>
-              </div>
-            </div>
-            <div class="row">
-                <div class="col-12 text-center">
-                    <button class="btn btn-lg btn-success" (click)="makeSale()"> Place Order</button>
-                </div>
-            </div>
-             
-          </div>
+      <!-- Cart item row -->
+      <div class="row pt-1" *ngFor="let cart of cartProducts" data-testid="cart-item"> 
+        <div class="col-3">
+          <img class="img-fluid" style="height: 200px;" [src]="cart.productImageURL" class="card-img-top" data-testid="product-image">
+        </div>
+        <div class="col-3" data-testid="product-name">
+          Name: {{cart.productName}}
+        </div>
+        <div class="col-2 text-end" data-testid="product-quantity">
+          Quantity: {{ cart.productQuantity }}
+        </div>
+        <div class="col-2 text-end">
+          <button class="btn btn-sm btn-danger" (click)="RemoveItem(cart.productID)" data-testid="remove-button">Remove</button>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-3"></div>
+        <div class="col-9">
+          <hr>
+        </div>
+      </div>
+
+      <!-- Totals Section -->
+      <div class="row" id="cart-summary">
+        <div class="col-2"></div>
+        <div class="col-2"></div>
+        <div class="col-4">
+          <div class="Subtotal" data-testid="total-items-label">Total Items:</div>
+          <div><small id="total-items">{{ totalitems }} items</small></div>
+        </div>
+        <div class="col-4 text-end">
+          <div data-testid="total-quantity-label">Total Quantity:</div>
+          <strong id="total-quantity">{{ subTotal }}</strong>
+        </div>
+      </div>
+
+      <!-- Place Order Button -->
+      <div class="row">
+        <div class="col-12 text-center">
+          <button class="btn btn-lg btn-success" (click)="makeSale()" id="place-order-btn">Place Order</button>
+        </div>
+      </div>
+
     </div>
+  </div>
 </div>
